[package]
name = "rusty-vex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false
bench = false

[build-dependencies]
bindgen = "0.61.0"

[dependencies]
libc = "0.2.137"
panic-halt = "0.2.0"
